bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(product) AS product, ENC_PT(label) AS label
  Sort: AS_SORTABLE_BYTES(ENC_TF(ENC_PT(label))) ASC NULLS FIRST, fetch=10
    Projection: lhs.product AS product, lhs.label AS label
      Filter: NOT EBV(BOUND(ENC_PT(rhs.testVar)))
        Projection: lhs.product, lhs.label, rhs.testVar
          Left Join: lhs.product = rhs.product
            SubqueryAlias: lhs
              BasicGraphPattern: projection=[product, label], filters=[EBV(GT(ENC_TF(ENC_PT(p1)), Union 4:4:156)), EBV(LT(ENC_TF(ENC_PT(p3)), Union 4:4:152))]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1]
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3]
            SubqueryAlias: rhs
              BasicGraphPattern: 
                QuadPattern: triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>]
                QuadPattern: triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar]
